--- a/tests/manual/embed.html
+++ b/tests/manual/embed.html
@@ -30,33 +30,25 @@
   <body>
 
     <h2>Auto pym</h3>
-    <div data-pym-src="http://localhost:8088" class="wrapper-full">Loading...</div>
+    <div data-pym-src="http://localhost:3000" class="wrapper-full">Loading...</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pym/1.1.2/pym.v1.min.js" type="text/javascript"></script>
 
     <h2>Manual Pym (medium)</h3>
     <div id="pym-embed-2" class="wrapper-medium"></div>
     <script type="text/javascript">
-      //<![CDATA[
-      (function(){
-        var pymParent = new pym.Parent(
-          "pym-embed-2",
-          "http://localhost:8088",
-          {}
-        );
-      })();
-      //]]>
-    </script>
+    //<![CDATA[
+(function() {
+  var pymParent = new pym.Parent('pym-embed-2', 'http://localhost:3000', {});
+})();
+//]]>
+</script>
 
     <h2>Manual Pym (small)</h3>
     <div id="pym-embed-3" class="wrapper-small"></div>
     <script type="text/javascript">
-      (function(){
-        var pymParent = new pym.Parent(
-          "pym-embed-3",
-          "http://localhost:8088",
-          {}
-        );
-      })();
-    </script>
+    (function() {
+  var pymParent = new pym.Parent('pym-embed-3', 'http://localhost:3000', {});
+})();
+</script>
   </body>
 </html>
